--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "scripts": {
     "lint": "eslint --cache .",
     "test": "jest",
-    "try": "npm run lint && npm run test"
+    "try": "npm run lint && npm run test",
+    "postinstall": "husky install",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable"
   },
   "repository": {
     "type": "git",
@@ -24,12 +27,6 @@
     "pinst": "^2.1.4",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-push": "[[ \"$(git symbolic-ref --short -q HEAD)\" != \"master\" ]] || npm run try",
-      "pre-commit": "pretty-quick --staged"
-    }
   },
   "jest": {
     "automock": false,
