--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   "author": "Salem Hilal (salem@etsy.com)",
   "license": "MIT",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "husky": "^5.0.9",
     "jest": "^26.6.3",
     "pinst": "^2.1.4",
